// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link button variant should render as default 1`] = `
.emotion-0 {
  display: inline-block;
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  border-top-width: 2px;
  border-top-style: solid;
  border-right-width: 2px;
  border-right-style: solid;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-left-width: 2px;
  border-left-style: solid;
  cursor: pointer;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: normal;
  font-weight: 700;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

.emotion-0:disabled,
.emotion-0.inactive {
  border-color: rgb(165, 165, 165);
  background-color: rgb(191, 191, 191);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):hover,
.emotion-0:not(:disabled):not(.inactive).hover {
  border-color: rgb(224, 224, 224);
  background-color: rgb(247, 247, 247);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):active,
.emotion-0:not(:disabled):not(.inactive).active {
  border-color: rgb(224, 224, 224);
  background-color: rgb(240, 240, 240);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):focus,
.emotion-0:not(:disabled):not(.inactive).focus {
  outline-style: dotted;
  outline-color: inherit;
  outline-width: 1px;
  outline-offset: 1px;
}

<div>
  <a
    class="emotion-0"
    role="link"
  >
    example
  </a>
</div>
`;

exports[`Link button variant should support trait props 1`] = `
.emotion-0 {
  display: inline-block;
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
  border-top-width: 2px;
  border-top-style: solid;
  border-right-width: 2px;
  border-right-style: solid;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-left-width: 2px;
  border-left-style: solid;
  cursor: alias;
  padding-top: 12px;
  padding-right: 16px;
  padding-bottom: 12px;
  padding-left: 16px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

.emotion-0:disabled,
.emotion-0.inactive {
  border-color: rgb(165, 140, 89);
  background-color: rgb(191, 149, 64);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):hover,
.emotion-0:not(:disabled):not(.inactive).hover {
  border-color: rgb(255, 170, 0);
  background-color: rgb(204, 136, 0);
  color: rgb(1, 1, 1);
}

.emotion-0:not(:disabled):not(.inactive):active,
.emotion-0:not(:disabled):not(.inactive).active {
  border-color: rgb(204, 136, 0);
  background-color: rgb(135, 90, 0);
  color: rgb(255, 255, 255);
}

.emotion-0:not(:disabled):not(.inactive):focus,
.emotion-0:not(:disabled):not(.inactive).focus {
  outline-style: dotted;
  outline-color: inherit;
  outline-width: 1px;
  outline-offset: 1px;
}

<div>
  <a
    class="emotion-0"
    color="primary"
    cursor="alias"
    role="link"
  >
    example
  </a>
</div>
`;

exports[`Link link variant should render as default 1`] = `
.emotion-0 {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: normal;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
  cursor: pointer;
}

.emotion-0:disabled,
.emotion-0.inactive {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: normal;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):hover,
.emotion-0:not(:disabled):not(.inactive).hover {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):active,
.emotion-0:not(:disabled):not(.inactive).active {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: double;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):focus,
.emotion-0:not(:disabled):not(.inactive).focus {
  outline-style: dotted;
  outline-color: inherit;
  outline-width: 1px;
  outline-offset: 1px;
}

.emotion-0:visited {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
}

<div>
  <a
    class="emotion-0"
    role="link"
  >
    example
  </a>
</div>
`;

exports[`Link link variant should support trait props 1`] = `
.emotion-0 {
  color: rgb(255, 170, 0);
  text-decoration-color: rgb(255, 170, 0);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
  cursor: alias;
}

.emotion-0:disabled,
.emotion-0.inactive {
  color: rgb(191, 149, 64);
  text-decoration-color: rgb(191, 149, 64);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):hover,
.emotion-0:not(:disabled):not(.inactive).hover {
  color: rgb(204, 136, 0);
  text-decoration-color: rgb(204, 136, 0);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):active,
.emotion-0:not(:disabled):not(.inactive).active {
  color: rgb(135, 90, 0);
  text-decoration-color: rgb(135, 90, 0);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):focus,
.emotion-0:not(:disabled):not(.inactive).focus {
  outline-style: dotted;
  outline-color: inherit;
  outline-width: 1px;
  outline-offset: 1px;
}

.emotion-0:visited {
  color: rgb(204, 136, 0);
  text-decoration-color: rgb(204, 136, 0);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

<div>
  <a
    class="emotion-0"
    color="primary"
    cursor="alias"
    role="link"
  >
    example
  </a>
</div>
`;

exports[`Link should render as default 1`] = `
.emotion-0 {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: normal;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
  cursor: pointer;
}

.emotion-0:disabled,
.emotion-0.inactive {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: normal;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):hover,
.emotion-0:not(:disabled):not(.inactive).hover {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):active,
.emotion-0:not(:disabled):not(.inactive).active {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: double;
  text-transform: none;
}

.emotion-0:not(:disabled):not(.inactive):focus,
.emotion-0:not(:disabled):not(.inactive).focus {
  outline-style: dotted;
  outline-color: inherit;
  outline-width: 1px;
  outline-offset: 1px;
}

.emotion-0:visited {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-transform: none;
}

<div>
  <a
    class="emotion-0"
    role="link"
  >
    example
  </a>
</div>
`;
